# clanker-yap

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  package.json
.githooks/: commit-msg  pre-push
.github/workflows/: windows-build.yml
docs/: README.md  api.md  architecture.md  build.md  commands.md  configuration.md  development.md  faq.md  getting-started.md  quick-start.md  release-checklist.md  troubleshooting.md  whisper-models.md
plans/recording-overlay-pill/: AGENT-PROMPT.md  GAP-REPORT.md  PLAN.md  PROGRESS.md  QUICKSTART.md  README.md
plans/voice-transcribe/: AGENT-PROMPT.md  CHECKLIST.md  PLAN.md  PROGRESS.md  QUICKSTART.md  README.md
plans/windows-build/: AGENT-PROMPT.md  CHECKLIST.md  PLAN.md  PROGRESS.md  QUICKSTART.md  README.md
plans/word-count/: AGENT-PROMPT.md  CHECKLIST.md  PLAN.md  PROGRESS.md  README.md
src/: index.html  main.js  overlay.html  style.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs  orchestrator.rs  state.rs
src-tauri/src/application/use_cases/: mod.rs  model_download.rs  paste.rs  settings.rs  transcribe.rs  transcription.rs
src-tauri/src/domain/: constants.rs  error.rs  mod.rs  settings.rs  transcription.rs
src-tauri/src/infrastructure/: mod.rs  overlay.rs
src-tauri/src/infrastructure/audio/: device.rs  eq.rs  mod.rs  recorder.rs  resample.rs
src-tauri/src/infrastructure/paste/: mod.rs  service.rs
src-tauri/src/infrastructure/persistence/: db.rs  mod.rs  paths.rs  settings_repo.rs  transcription_repo.rs
src-tauri/src/infrastructure/whisper/: downloader.rs  engine.rs  mod.rs
src-tauri/src/presentation/: dto.rs  mod.rs
src-tauri/src/presentation/commands/: audio_cmds.rs  mod.rs  settings_cmds.rs  transcription_cmds.rs  window_cmds.rs
