[package]
name = "voice-transcribe"
version = "0.1.1"
description = "Local voice-to-text transcription app"
authors = ["Clanker contributors"]
edition = "2021"

[lib]
name = "voice_transcribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enable Wayland overlay positioning via GTK Layer Shell.
# Requires the `gtk-layer-shell` system library (e.g., `libgtk-layer-shell` on Arch, `libgtk-layer-shell-dev` on Debian/Ubuntu).
# Without this feature, the overlay falls back to X11 `set_always_on_top` on Wayland as well.
wayland-overlay = ["gtk-layer-shell"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
whisper-rs = "0.16"
enigo = "0.2"
num_cpus = "1"
crossbeam-channel = "0.5"
realfft = "3"

[target.'cfg(target_os = "linux")'.dependencies]
# GTK Layer Shell for Wayland overlay positioning. Only used when the `wayland-overlay` feature is enabled.
gtk-layer-shell = { version = "0.8", features = ["v0_6"], optional = true }
# GTK3 crate — needed for low-level window property access (e.g. focus_on_map) on the overlay.
# Already a transitive dependency via Tauri; listing it here lets us import gtk::prelude traits.
gtk = { version = "0.18", features = ["v3_24"] }
